force-app/main/default/objects/CGMS_Complaint__c/CGMS_Complaint__c.object-meta.xml
<CustomObject>
    <label>CGMS Complaint</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Complaint Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CGMS Complaints</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>