force-app/main/default/objects/CGMS_Complaint__c/fields/Citizen__c.field-meta.xml
<CustomField>
    <fullName>Citizen__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Citizen</label>
    <referenceTo>CGMS_Citizen__c</referenceTo>
    <relationshipLabel>CGMS Complaints</relationshipLabel>
    <relationshipName>CGMS_Complaints</relationshipName>
    <type>Lookup</type>
</CustomField>