force-app/main/default/objects/CGMS_Complaint__c/fields/Complaint_Type__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Type__c</fullName>
    <label>Complaint Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Civic Issue</fullName>
            </value>
            <value>
                <fullName>Public Service</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>