force-app/main/default/objects/CGMS_Complaint__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Department</label>
    <referenceTo>CGMS_Department__c</referenceTo>
    <relationshipLabel>CGMS Complaints</relationshipLabel>
    <relationshipName>CGMS_Complaints</relationshipName>
    <type>Lookup</type>
</CustomField>